--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,50 @@
-body {
+html,body {
     background: #fafafa;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333;
+    height: 100%;
+    margin: 0;
+    background-color: lightgray;
+}
+
+core-header-panel {
+    height: 100%;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch; 
+}
+
+core-toolbar {
+    background: #2B3838;
+    color: white;
+}
+
+paper-tab::shadow #ink{
+    color: #485B5B;
+}
+
+paper-tabs::shadow #selectionBar {
+    background-color: #DD001E;
+}
+
+#tabs {
+    width: 100%;
+    margin: 0;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    text-transform: uppercase;
+}
+
+.container {
+    width: 80%;
+    margin: 50px auto;
+}
+
+@media (min-width: 481px) {
+    #tabs {
+        width: 200px;
+    }
 }
 
 .hero-unit {
