--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -70,3 +70,13 @@ paper-tabs::shadow #selectionBar {
     color: #000;
     padding: 0.2em 0;
 }
+
+html /deep/ paper-dialog#app-settings {
+    top: 25px;
+    right: 5px;
+    width: 500px;
+}
+html /deep/ paper-dialog#app-settings::shadow #scroller {
+    overflow: hidden;
+}
+
